--- a/site/docs/red-team/iso-42001.md
+++ b/site/docs/red-team/iso-42001.md
@@ -9,13 +9,13 @@ ISO/IEC 42001:2023 is the international standard for AI Management Systems. It p
 
 The ISO 42001 framework covers seven key risk domains:
 
-1. [Accountability & Human Oversight](#1-accountability--human-oversight-iso42001accountability)
-2. [Fairness & Bias Prevention](#2-fairness--bias-prevention-iso42001fairness)
-3. [Privacy & Data Protection](#3-privacy--data-protection-iso42001privacy)
-4. [Robustness & Resilience](#4-robustness--resilience-iso42001robustness)
-5. [Security & Vulnerability Management](#5-security--vulnerability-management-iso42001security)
-6. [Safety & Ethical Use](#6-safety--ethical-use-iso42001safety)
-7. [Transparency & Trustworthiness](#7-transparency--trustworthiness-iso42001transparency)
+1. Accountability & Human Oversight
+2. Fairness & Bias Prevention
+3. Privacy & Data Protection
+4. Robustness & Resilience
+5. Security & Vulnerability Management
+6. Safety & Ethical Use
+7. Transparency & Trustworthiness
 
 ## Scanning for ISO 42001 Compliance
 
